[package]
name = "atlas-lua"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tree-sitter = "0.20"
tree-sitter-lua = { git = "https://github.com/Azganoth/tree-sitter-lua" }
clap = { version = "4.1", features = ["derive"] }
thiserror = "1.0"
log = "0.4"
env_logger = "0.9"
# serde = { version = "1.0", features = ["derive"] }
# serde_yaml = "0.9"
